--- a/ann_for_forex.ipynb
+++ b/ann_for_forex.ipynb
@@ -1,32 +1,34 @@
 {
-  "metadata" : {
-    "kernelspec" : {
-      "name" : "python3",
-      "display_name" : "Python 3"
+  "metadata": {
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
     },
-    "language_info" : {
-      "version" : "3.x",
-      "name" : "python"
+    "language_info": {
+      "version": "3.x",
+      "name": "python"
+    },
+    "colab": {
+      "provenance": []
     }
   },
-  "nbformat_minor" : 2,
-  "nbformat" : 4,
-  "cells" : [
+  "nbformat_minor": 0,
+  "nbformat": 4,
+  "cells": [
     {
-      "metadata" : {
-        "scrolled" : "auto",
-        "collapsed" : false,
-        "tags" : [
-
-        ]
+      "metadata": {
+        "scrolled": "auto",
+        "collapsed": false,
+        "tags": [],
+        "id": "sVNimZPi1iyS"
       },
-      "source" : [
-        "This notebook is a experiment of creating model, especially Feed-Forward Neural Network for predicting the closing price of EURUSD based on daily closing price\n"
+      "source": [
+        "This notebook is an experiment to create an ANN model, especially Feed-Forward Neural Network for predicting the closing price of EURUSD based on daily closing price\n"
       ],
-      "cell_type" : "markdown"
+      "cell_type": "markdown"
     },
     {
-      "source" : [
+      "source": [
         "#Necessary Imports\n",
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -34,18 +36,14 @@
         "printa\n",
         "\n"
       ],
-      "cell_type" : "code",
-      "metadata" : {
-        "tags" : [
-
-        ],
-        "collapsed" : false,
-        "scrolled" : "auto"
+      "cell_type": "code",
+      "metadata": {
+        "tags": [],
+        "scrolled": "auto",
+        "id": "tvHUqYTy1iyV"
       },
-      "outputs" : [
-
-      ],
-      "execution_count" : 0
+      "outputs": [],
+      "execution_count": null
     }
   ]
 }
