--- a/ann_for_forex.ipynb
+++ b/ann_for_forex.ipynb
@@ -44,7 +44,7 @@
         "id": "tvHUqYTy1iyV"
       },
       "outputs": [],
-      "execution_count": 12
+      "execution_count": 1
     },
     {
       "cell_type": "markdown",
@@ -88,27 +88,33 @@
       ],
       "metadata": {
         "id": "oO9GVad46X2p",
-        "outputId": "e1eef5a3-803a-4b00-c3c0-ecfea50becbb",
+        "outputId": "beb08f2a-a98f-47da-f2c9-40ee17e886c9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": 2,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading Data for EUR-USD from 2015-01-01 to 2025-07-13\n"
+          ]
+        },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-13-341652406.py:12: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+            "/tmp/ipython-input-2-341652406.py:12: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
             "  data = yf.download(ticker, start= start, end=end, progress= True)\n",
-            "\r[*********************100%***********************]  1 of 1 completed"
+            "[*********************100%***********************]  1 of 1 completed"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Downloading Data for EUR-USD from 2015-01-01 to 2025-07-13\n",
             "Successfully downloaded\n",
             "Date saved\n"
           ]
@@ -129,44 +135,35 @@
         "if os.path.exists(full_save_path):\n",
         "  forex_df = pd.read_csv(full_save_path, skiprows=3, header=None)\n",
         "else:\n",
-        "  print(\"File not found\")"
-      ],
-      "metadata": {
-        "id": "Q9s9FWEfDFcf"
-      },
-      "execution_count": 14,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "  print(\"File not found\")\n",
+        "\n",
         "#Cleaning Dataset. Remove every other column except Date and Close\n",
         "forex_df.columns = ['Date', 'Close', 'High', 'Low', 'Open', 'Volume']\n",
-        "forex_df.set_index('Date', inplace=True)\n",
+        "forex_df.columns = forex_df.columns.str.replace(' ','')\n",
         "forex_df.drop(columns=['High', 'Low', 'Open', 'Volume'], inplace=True)\n",
         "\n",
-        "print(forex_df.head())"
+        "\n",
+        "print(forex_df.tail())"
       ],
       "metadata": {
         "id": "l1GSf-o0FRkE",
-        "outputId": "adcda796-aea8-4b44-fb1c-9a8868f13c37",
+        "outputId": "621a0187-1e3e-4bbc-bf0b-0420d27bf430",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "               Close\n",
-            "Date                \n",
-            "2015-01-01  1.209863\n",
-            "2015-01-02  1.208941\n",
-            "2015-01-05  1.194643\n",
-            "2015-01-06  1.193902\n",
-            "2015-01-07  1.187536\n"
+            "            Date     Close\n",
+            "2736  2025-07-07  1.178078\n",
+            "2737  2025-07-08  1.173654\n",
+            "2738  2025-07-09  1.172457\n",
+            "2739  2025-07-10  1.173117\n",
+            "2740  2025-07-11  1.170275\n"
           ]
         }
       ]
@@ -191,7 +188,7 @@
       "metadata": {
         "id": "YjzVBFMCzgud"
       },
-      "execution_count": 18,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -236,12 +233,12 @@
       ],
       "metadata": {
         "id": "nDv3F4UB01KZ",
-        "outputId": "724a5411-c7f4-4b24-e7c0-3fd56025998b",
+        "outputId": "ce51a17a-4777-44b9-b10b-58a7b9f3be92",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -252,6 +249,123 @@
             "Validation Size: 406\n",
             "Test Size: 408\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Dense, Input\n",
+        "\n",
+        "#Creating Model\n",
+        "EPOCHS = 50\n",
+        "BATCH_SIZE = 32\n",
+        "\n",
+        "X_train = np.load(os.path.join(SAVE_SETS_DIR, \"X_train.npy\"))\n",
+        "y_train = np.load(os.path.join(SAVE_SETS_DIR, \"y_train.npy\"))\n",
+        "X_val = np.load(os.path.join(SAVE_SETS_DIR, \"X_val.npy\"))\n",
+        "y_val = np.load(os.path.join(SAVE_SETS_DIR, \"y_val.npy\"))\n",
+        "X_test = np.load(os.path.join(SAVE_SETS_DIR, \"X_test.npy\"))\n",
+        "y_test = np.load(os.path.join(SAVE_SETS_DIR, \"y_test.npy\"))\n",
+        "\n",
+        "MODEL = Sequential(\n",
+        "    [\n",
+        "        Input(shape=(SEQUENCE_LENGTH, 1)),\n",
+        "        Dense(64, activation='sigmoid'),\n",
+        "        Dense(1, activation ='linear')\n",
+        "    ]\n",
+        ")\n",
+        "\n",
+        "MODEL.compile(optimizer='adam', loss='mse', metrics=['mae'])\n",
+        "MODEL.summary()"
+      ],
+      "metadata": {
+        "id": "mqhDDI-gZM1_",
+        "outputId": "4d411479-2620-43f3-9558-b9c1a889a142",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "\u001b[1mModel: \"sequential_1\"\u001b[0m\n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential_1\"</span>\n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
+              "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
+              "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
+              "│ dense_2 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m30\u001b[0m, \u001b[38;5;34m64\u001b[0m)         │           \u001b[38;5;34m128\u001b[0m │\n",
+              "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+              "│ dense_3 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m30\u001b[0m, \u001b[38;5;34m1\u001b[0m)          │            \u001b[38;5;34m65\u001b[0m │\n",
+              "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
+              "┃<span style=\"font-weight: bold\"> Layer (type)                    </span>┃<span style=\"font-weight: bold\"> Output Shape           </span>┃<span style=\"font-weight: bold\">       Param # </span>┃\n",
+              "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
+              "│ dense_2 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">30</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">64</span>)         │           <span style=\"color: #00af00; text-decoration-color: #00af00\">128</span> │\n",
+              "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+              "│ dense_3 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">30</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">1</span>)          │            <span style=\"color: #00af00; text-decoration-color: #00af00\">65</span> │\n",
+              "└─────────────────────────────────┴────────────────────────┴───────────────┘\n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "\u001b[1m Total params: \u001b[0m\u001b[38;5;34m193\u001b[0m (772.00 B)\n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Total params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">193</span> (772.00 B)\n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "\u001b[1m Trainable params: \u001b[0m\u001b[38;5;34m193\u001b[0m (772.00 B)\n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">193</span> (772.00 B)\n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "\u001b[1m Non-trainable params: \u001b[0m\u001b[38;5;34m0\u001b[0m (0.00 B)\n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Non-trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> (0.00 B)\n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
         }
       ]
     }
