--- a/ann_for_forex.ipynb
+++ b/ann_for_forex.ipynb
@@ -503,6 +503,38 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#calculating model performance\n",
+        "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+        "mse = mean_squared_error(y_test_actual, predictions_actual)\n",
+        "mae = mean_absolute_error(y_test_actual, predictions_actual)\n",
+        "rmse = np.sqrt(mse)\n",
+        "print(f\"Mean Squared Error: {mse:.4f}\")\n",
+        "print(f\"Mean Absolute Error: {mae:.4f}\")\n",
+        "print(f\"Root Mean Squared Error: {rmse:.4f}\")"
+      ],
+      "metadata": {
+        "id": "XbUhQqoZkyTl",
+        "outputId": "2e5a334b-7ee1-48b8-8380-b20bc9412aef",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mean Squared Error: 0.0000\n",
+            "Mean Absolute Error: 0.0041\n",
+            "Root Mean Squared Error: 0.0056\n"
+          ]
+        }
+      ]
     }
   ]
 }
