--- a/Approximate_Sinusoid_Time_Series.ipynb
+++ b/Approximate_Sinusoid_Time_Series.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNEoGuhUOItgYA/9uS0V0JJ",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNEoGuhUOItgYA/9uS0V0JJ"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/sria-the-fury/ANN-for-Time-Series-Forex-PyNote/blob/main/Approximate_Sinusoid_Time_Series.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -124,15 +113,15 @@
           "height": 460
         },
         "id": "ekqSNFkrgcQs",
-        "outputId": "e9d7e3e3-909d-4905-9bde-2e2160be9fab"
+        "outputId": "30325908-c7e5-4f31-a08b-b6048cc13465"
       },
-      "execution_count": 4,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--- Step 1: Generating Sinusoid Data ---\n",
+            "--- Generating Sinusoid Data ---\n",
             "   Generated 1500 data points.\n"
           ]
         },
@@ -141,23 +130,23 @@
           "data": {
             "text/plain": [
               "         Value\n",
-              "0    -0.021814\n",
-              "1     0.082857\n",
-              "2     0.145530\n",
-              "3     0.170136\n",
-              "4     0.113562\n",
+              "0     0.108465\n",
+              "1     0.019675\n",
+              "2     0.175239\n",
+              "3     0.133927\n",
+              "4     0.108579\n",
               "...        ...\n",
-              "1495 -0.094891\n",
-              "1496 -0.186148\n",
-              "1497 -0.131058\n",
-              "1498 -0.101706\n",
-              "1499 -0.003867\n",
+              "1495 -0.205039\n",
+              "1496 -0.128961\n",
+              "1497 -0.023861\n",
+              "1498  0.030271\n",
+              "1499 -0.052314\n",
               "\n",
               "[1500 rows x 1 columns]"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-cc3c0285-135d-4c9a-a5d6-ab0332e6487c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-97469671-ebc1-48b1-a6f9-9137f228f304\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -182,23 +171,23 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>-0.021814</td>\n",
+              "      <td>0.108465</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>0.082857</td>\n",
+              "      <td>0.019675</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>0.145530</td>\n",
+              "      <td>0.175239</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>0.170136</td>\n",
+              "      <td>0.133927</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>0.113562</td>\n",
+              "      <td>0.108579</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -206,23 +195,23 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1495</th>\n",
-              "      <td>-0.094891</td>\n",
+              "      <td>-0.205039</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1496</th>\n",
-              "      <td>-0.186148</td>\n",
+              "      <td>-0.128961</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1497</th>\n",
-              "      <td>-0.131058</td>\n",
+              "      <td>-0.023861</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1498</th>\n",
-              "      <td>-0.101706</td>\n",
+              "      <td>0.030271</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1499</th>\n",
-              "      <td>-0.003867</td>\n",
+              "      <td>-0.052314</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -231,7 +220,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cc3c0285-135d-4c9a-a5d6-ab0332e6487c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-97469671-ebc1-48b1-a6f9-9137f228f304')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -283,12 +272,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-cc3c0285-135d-4c9a-a5d6-ab0332e6487c button.colab-df-convert');\n",
+              "        document.querySelector('#df-97469671-ebc1-48b1-a6f9-9137f228f304 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-cc3c0285-135d-4c9a-a5d6-ab0332e6487c');\n",
+              "        const element = document.querySelector('#df-97469671-ebc1-48b1-a6f9-9137f228f304');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -308,8 +297,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-8c672e32-b5e6-4b94-b059-5c048da30e1e\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8c672e32-b5e6-4b94-b059-5c048da30e1e')\"\n",
+              "    <div id=\"df-414baed9-1da9-4d02-afaa-3461cf1fb158\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-414baed9-1da9-4d02-afaa-3461cf1fb158')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -428,7 +417,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-8c672e32-b5e6-4b94-b059-5c048da30e1e button');\n",
+              "            document.querySelector('#df-414baed9-1da9-4d02-afaa-3461cf1fb158 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -440,11 +429,11 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "summary": "{\n  \"name\": \"pd\",\n  \"rows\": 1500,\n  \"fields\": [\n    {\n      \"column\": \"Value\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.707414261734008,\n        \"min\": -1.103026644087406,\n        \"max\": 1.1166318965779163,\n        \"num_unique_values\": 1500,\n        \"samples\": [\n          0.3013499225669491,\n          0.6721660198791266,\n          -0.9263194727013044\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"pd\",\n  \"rows\": 1500,\n  \"fields\": [\n    {\n      \"column\": \"Value\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.7086051201984872,\n        \"min\": -1.122676366589044,\n        \"max\": 1.1180129025005623,\n        \"num_unique_values\": 1500,\n        \"samples\": [\n          0.34954471397387543,\n          0.8480792791209046,\n          -0.9955348604397085\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 16
         }
       ]
     },
