timestep where value close to 1 and 0

--- a/Approximate_Sinusoid_Time_Series.ipynb
+++ b/Approximate_Sinusoid_Time_Series.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPS9xohqbB7GT3yFw0Dfxes"
+      "authorship_tag": "ABX9TyPKFlmscYEcuZZFguOb+q3R"
     },
     "kernelspec": {
       "name": "python3",
@@ -754,7 +754,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fc7402d6",
-        "outputId": "2caad689-94a7-4112-885b-dcb3ebda242f"
+        "outputId": "da96a681-d7e8-40aa-a6d2-6776a9b5f746"
       },
       "source": [
         "\n",
@@ -777,10 +777,9 @@
         "\n",
         "# Find the time step of the maximum value 1 in prediction_actual\n",
         "index_of_max_actual = np.argmax(predictions_actual)\n",
-        "print(\"Index of maximum actual value:\", index_of_max_actual)\n",
-        "print(\"Maximum actual value:\", predictions_actual[index_of_max_actual])\n"
+        "print(f\"At {index_of_max_actual} timestep the max value close to 1 is {predictions_actual[index_of_max_actual]}\")\n"
       ],
-      "execution_count": 29,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -790,8 +789,7 @@
             "Timestep where predictions_actual is close to 0: [ 67  68 143 144 217 218]\n",
             "Timestep where y_test_actual is close to 1: [ 98  99 100 101 102 103 104 105 106 107 108 109 110 111 112 113]\n",
             "Timestep where y_test_actual is close to 0: [ 67  68  69 142 143 144 217 218]\n",
-            "Index of maximum actual value: 105\n",
-            "Maximum actual value: [0.98268944]\n"
+            "At 105 timestep the max value close to 1 is [0.98268944]\n"
           ]
         }
       ]
@@ -803,7 +801,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dc8473cc",
-        "outputId": "bb73aa80-ff41-42d5-c59f-7769cbb5632b"
+        "outputId": "195c40c7-a27f-4495-d619-0493cad89d82"
       },
       "source": [
         "zero_values = predictions_actual[indices_at_0_pred]\n",
@@ -813,18 +811,15 @@
         "\n",
         "# Get the actual index from the original zero_indices list\n",
         "closest_to_zero_timestep = indices_at_0_pred[closest_to_zero_index_in_list]\n",
-        "\n",
-        "print(f\"The timestep closest to 0 among the listed timestep is: {closest_to_zero_timestep}\")\n",
-        "print(f\"The actual value at this timestep is: {y_test_actual[closest_to_zero_timestep]}\")"
+        "print(f\"At {closest_to_zero_timestep} timestep the value close to 0 is {predictions_actual[closest_to_zero_timestep]}\")\n"
       ],
-      "execution_count": 31,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The timestep closest to 0 among the listed timestep is: 68\n",
-            "The actual value at this timestep is: [-0.00419157]\n"
+            "At 68 timestep the value close to 0 is [0.01250469]\n"
           ]
         }
       ]
