compare ed < T, and statistics outcomes

--- a/calculating_euclidean_distance.ipynb
+++ b/calculating_euclidean_distance.ipynb
@@ -1,83 +1,230 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPbgftvbXhUUizCyxMQl5B9"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import pandas as pd\n",
+    "\n",
+    "def calculate_euclidean_distance(v1, v2):\n",
+    "    squared_diffs = sum((p - q) ** 2 for p, q in zip(v1, v2))\n",
+    "    return math.sqrt(squared_diffs)"
+   ]
   },
-  "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data rows(first 5 are each vector's value, 6th is forecast)\n",
+    "main_data = [\n",
+    "        [1.036, 0.281, -0.347, 0.877, 0.271, 0.245],\n",
+    "        [0.281, -0.347, 0.877, 0.271, 0.245, -0.481],\n",
+    "        [-0.347, 0.877, 0.271, 0.245, -0.481, 0.271],\n",
+    "        [0.877, 0.271, 0.245, -0.481, 0.271, 0.45],\n",
+    "        [0.271, 0.245, -0.481, 0.271, 0.45, 0.334],\n",
+    "        [0.245, -0.481, 0.271, 0.45, 0.334, 0.016],\n",
+    "        [-0.481, 0.271, 0.45, 0.334, 0.016, 0.65],\n",
+    "        [0.271, 0.45, 0.334, 0.016, 0.65, 0.168]\n",
+    "    ]\n",
+    "\n",
+    "# Base Vector B\n",
+    "base_vector = [0.45, 0.98, 0.29, 0.59, 0.38]\n",
+    "\n",
+    "# Threshold Value\n",
+    "  \n",
+    "THRESHOLD = 1.3\n",
+    "\n",
+    "accepted_forecasts = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "PiVW159usLRz",
+    "outputId": "6560ca48-0bab-4c1a-dc33-e782b756ae51"
+   },
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    print(f\"{'Vectors':<10} {'Euclidean Dist':<20} {'Forecast':<10} {'Status'}\")\n",
+    "    print(\"-\" * 50)\n",
+    "\n",
+    "    for i, row in enumerate(main_data):\n",
+    "        # Extract Vector (first 5 values) and Forecast (6th value)\n",
+    "        current_vector = row[:5]\n",
+    "        forecast_value = row[5]\n",
+    "\n",
+    "        # Calculate Distance\n",
+    "        dist = calculate_euclidean_distance(current_vector, base_vector)\n",
+    "\n",
+    "        # Check Threshold\n",
+    "        status = \"Rejected\"\n",
+    "        if dist < THRESHOLD:\n",
+    "            status = \"ACCEPTED\"\n",
+    "            accepted_forecasts.append(forecast_value)\n",
+    "\n",
+    "        print(f\"{i+1:<10} {dist:<20.5f} {forecast_value:<10} {status}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Saving the main-data table in csv formate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
     {
-      "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "PiVW159usLRz",
-        "outputId": "6560ca48-0bab-4c1a-dc33-e782b756ae51"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Vector A: [1.036, 0.281, -0.347, 0.877, 0.271]\n",
-            "Vector B: [0.281, -0.347, 0.877, 0.271, 0.245]\n",
-            "------------------------------\n",
-            "Differences: [0.755, 0.628, -1.224, 0.606, 0.026000000000000023]\n",
-            "Squared Diffs: [0.570025, 0.394384, 1.498176, 0.367236, 0.0006760000000000013]\n",
-            "Sum of Squares: 2.83049700\n",
-            "------------------------------\n",
-            "Final Euclidean Distance: 1.68\n"
-          ]
-        }
-      ],
-      "source": [
-        "import math\n",
-        "\n",
-        "\n",
-        "# Vector A: First 5 percentage difference value\n",
-        "vec_a = [1.036, 0.281, -0.347, 0.877, 0.271]\n",
-        "\n",
-        "# Vector B: skip the first value and take next five\n",
-        "vec_b = [0.281, -0.347, 0.877, 0.271, 0.245]\n",
-        "\n",
-        "print(f\"Vector A: {vec_a}\")\n",
-        "print(f\"Vector B: {vec_b}\")\n",
-        "print(\"-\" * 30)\n",
-        "\n",
-        "# Calculate the Differences (A - B)\n",
-        "differences = []\n",
-        "for i in range(5):\n",
-        "    diff = vec_a[i] - vec_b[i]\n",
-        "    differences.append(diff)\n",
-        "print(f\"Differences: {differences}\")\n",
-        "\n",
-        "# Square the Differences (A - B)^2\n",
-        "squared_diffs = []\n",
-        "for val in differences:\n",
-        "    sq = val ** 2\n",
-        "    squared_diffs.append(sq)\n",
-        "print(f\"Squared Diffs: {squared_diffs}\")\n",
-        "\n",
-        "\n",
-        "sum_sq = sum(squared_diffs)\n",
-        "print(f\"Sum of Squares: {sum_sq:.8f}\")\n",
-        "\n",
-        "euclidean_dist = math.sqrt(sum_sq)\n",
-        "\n",
-        "print(\"-\" * 30)\n",
-        "print(f\"Final Euclidean Distance: {euclidean_dist:.2f}\")"
-      ]
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved 'main_data.csv'.\n"
+     ]
     }
-  ]
+   ],
+   "source": [
+    "# Saving main_data in CSV\n",
+    "columns = ['p1', 'p2', 'p3', 'p4', 'p5', 'true_next_value']\n",
+    "df_data = pd.DataFrame(main_data, columns=columns)\n",
+    "\n",
+    "# Save Input Data to CSV\n",
+    "df_data.to_csv('main_data.csv', index_label='Vectors')\n",
+    "print(\"Saved 'main_data.csv'.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vectors    Euclidean Dist       Forecast   Status\n",
+      "--------------------------------------------------\n",
+      "1          1.15413              0.245      ACCEPTED\n",
+      "2          1.50135              -0.481     Rejected\n",
+      "3          1.22741              0.271      ACCEPTED\n",
+      "4          1.35866              0.45       Rejected\n",
+      "5          1.12844              0.334      ACCEPTED\n",
+      "6          1.48278              0.016      Rejected\n",
+      "7          1.26217              0.65       ACCEPTED\n",
+      "8          0.84691              0.168      ACCEPTED\n"
+     ]
+    }
+   ],
+   "source": [
+    "#running main fucntion\n",
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculate The Outcomes How many time positive and negative value Occurs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==============================\n",
+      "STATISTICS ON ACCEPTED FORECASTS\n",
+      "==============================\n",
+      "Total Accepted: 5\n",
+      "Positive Outcomes: 100.00% (5/5)\n",
+      "Negative Outcomes: 0.00% (0/5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\n\" + \"=\"*30)\n",
+    "print(\"STATISTICS ON ACCEPTED FORECASTS\")\n",
+    "print(\"=\"*30)\n",
+    "\n",
+    "if not accepted_forecasts:\n",
+    "    print(f\"No vectors had a distance lower than the threshold ({THRESHOLD}).\")\n",
+    "    print(\"Tip: Increase the THRESHOLD variable in the script to see more matches.\")\n",
+    "else:\n",
+    "    positive_count = sum(1 for v in accepted_forecasts if v > 0)\n",
+    "    negative_count = sum(1 for v in accepted_forecasts if v < 0)\n",
+    "    total_accepted = len(accepted_forecasts)\n",
+    "\n",
+    "    pos_pct = (positive_count / total_accepted) * 100\n",
+    "    neg_pct = (negative_count / total_accepted) * 100\n",
+    "\n",
+    "    print(f\"Total Accepted: {total_accepted}\")\n",
+    "    print(f\"Positive Outcomes: {pos_pct:.2f}% ({positive_count}/{total_accepted})\")\n",
+    "    print(f\"Negative Outcomes: {neg_pct:.2f}% ({negative_count}/{total_accepted})\")\n",
+    "    df_results = pd.DataFrame(accepted_forecasts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved 'forecast_table.csv'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save Analysis Results to CSV\n",
+    "df_results.to_csv('forecast_table.csv', index=False)\n",
+    "print(\"Saved 'forecast_table.csv'.\")"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "authorship_tag": "ABX9TyPbgftvbXhUUizCyxMQl5B9",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
