--- a/Calculate_ED_for_all_dataset.ipynb
+++ b/Calculate_ED_for_all_dataset.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -31,7 +31,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_14300/4083967177.py:8: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "/tmp/ipykernel_14300/2381738963.py:8: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
       "  df = yf.download(ticker, start=\"2000-01-01\", progress=False)\n"
      ]
     },
@@ -58,7 +58,7 @@
     "import pandas as pd\n",
     "\n",
     "def download_and_fix_eurusd_close():\n",
-    "    # 1. Download EUR/USD data\n",
+    "    # Download EUR/USD data\n",
     "    print(\"Downloading EUR/USD data...\")\n",
     "    ticker = \"EURUSD=X\"\n",
     "    df = yf.download(ticker, start=\"2000-01-01\", progress=False)\n",
@@ -460,31 +460,6 @@
     "output_df.to_csv('output_table.csv', index=True)\n",
     "print(\"Generated 'output_table.csv'.\")\n",
     "display(output_df.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "372d2c9c",
-    "outputId": "e635752b-b3c6-4a48-ad43-373b7df8bee4"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of Positive Accepted Forecasts: 551\n",
-      "Number of Negative Accepted Forecasts: 615\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"Number of Positive Accepted Forecasts: {positive_outcomes}\")\n",
-    "print(f\"Number of Negative Accepted Forecasts: {negative_outcomes}\")"
    ]
   },
   {
